# cosmicos

./: .gitignore  .travis.yml  CMakeLists.txt  COS_AND.html  COS_D.html  COS_NOR.html  COS_NOT.html  COS_OR.html  COS_OSC.html  COS_SR.html  Makefile  README.TXT  README.md  README.txt  _config.yml  about.html  build.sh  build_with_docker.sh  depend.txt  depend_min.txt  details.html  evaluate.html  go.sh  iconic-000000.html  iconic-000001.html  iconic-000002.html  iconic-000003.html  iconic-000004.html  iconic-000005.html  iconic-000006.html  iconic-000007.html  iconic-000008.html  iconic-000009.html  iconic-000010.html  iconic-000011.html  iconic-000012.html  iconic-000013.html  iconic-000014.html  iconic-000015.html  iconic-000016.html  (+236 more)
.github/workflows/: main.yml
_includes/: block_CCC.txt  block_FFF.txt  block_III.txt  block_MMM.txt  block_RRR.txt  block_SSS.txt  footer.html  glyph.txt  glyph_caveat.html  glyph_head.txt  header.html  sections.html
_layouts/: default.html  gate.html
_posts/: 2013-08-29-welcome-to-jekyll.markdown
analysis/: decoding_cosmicos.py  statistical_graphical_analysis.py  tests_analysis.py  tests_runner.py
analysis/examples/: README.md  meti.txt
audio-src/: Sound.hx  compile_cpp.hxml  compile_js.hxml  compile_php.hxml  test.js
audio-src/cosmicos/: Sound.hx
css/: big.css  jqconsole.css  main.css  small.css
docker/: Dockerfile
fonts/: cosmic_spider.eot  inconsolata-bold-webfont.eot  inconsolata-regular-webfont.eot
js/: cosmicos.js
msg/: COS_ADDER.gate  COS_AND.gate  COS_Addition.md  COS_Addition.pl  COS_AndLogic.md  COS_AndLogic.pl  COS_Begin.js  COS_Begin.pl  COS_Binary.js  COS_Binary.md  COS_CommentBase.pl  COS_Compare.js  COS_Compare.md  COS_Complex.js  COS_Cons.md  COS_Cons.pl  COS_DefineFunction.js  COS_DefineFunction.md  COS_Demo.scm  COS_Dot.js  COS_Element.js  COS_Element.md  COS_Evaluation.js  COS_Evaluation.md  COS_Geo.scm  COS_Graph.js  COS_Graph.md  COS_Graph.pl  COS_Hash.pl  COS_If.md  COS_If.pl  COS_Implication.pl  COS_Intro.js  COS_Intro.md  COS_JHashMap.java  COS_JList_impl.scm  COS_JNamed.java  COS_JRobo.java  COS_JRoom.java  COS_JRoom_test.scm  (+59 more)
src/: BASE.cmake  CMakeLists.txt  COS_AndLogic.pl  COS_Begin.pl  COS_Binary.pl  COS_CommentBase2.pl  COS_CommentBase3.pl  COS_Compare.js  COS_Cons.pl  COS_D.gate  COS_DefineFunction.pl  COS_Demo.scm  COS_Double.pl  COS_Evaluation.pl  COS_Geo.scm  COS_If.pl  COS_Intro.js  COS_JAction.java  COS_JDoor.java  COS_JList.java  COS_JListIterator.java  COS_JListIterator_impl.scm  COS_JList_impl.scm  COS_JList_test.scm  COS_JRobo.java  COS_JRoom.java  COS_JRoom_test.scm  COS_JThing.java  COS_JWorld.java  COS_JavaMain.java  COS_JavaPrep.scm  COS_JavaTest.java  COS_JavaValidate.scm  COS_Let.pl  COS_License.pl  COS_List.pl  COS_ListPre.js  COS_ListPre.pl  COS_Map.pl  COS_Message.scm  (+27 more)
src/assemble/: CosmicDrive.js  assemble2json.js  cosmicos.js  evaluate.js  primer.js
src/cmake/: assemble.cmake  convert_gate.cmake  convert_java.cmake  convert_md.cmake  convert_pl.cmake  convert_scm.cmake  node.cmake  typescript.cmake  wc.cmake  wrap.cmake
src/cmd/: Eval.ts  cosh.js  cosh.ts
src/cosmicos/: AllNumericCodec.hx  BigInteger.hx  Codec.hx  Codec.ts  Complex.hx  Config.hx  Cons.hx  Evaluate.hx  ExternalVocab.hx  FourSymbolCodec.hx  FourSymbolCodecV2.ts  GlyphCode.hx  GlyphCode.ts  ManuscriptStyle.hx  Memory.hx  Parse.hx  ParseCodec.hx  Rename.ts  Sound.hx  SpiderImage.hx  SpiderScrawl.hx  State.hx  Statement.hx  Statement.ts  TranslateCodec.hx  UnflattenCodec.hx  Vocab.hx  Vocab.ts
src/filter/: drawgate-txt.pl
src/font/: OctoGlyph.ts  SpiderScrawl.d.ts  fontcustom.yml  generate_glyphs.js  generate_glyphs.ts  glyphs_to_svg.sh
src/gate/: UnlessDraw.ts  UnlessGrid.ts  UnlessGridExamples.ts  gate.ts
src/java/: CMakeLists.txt  Fritzifier.java  UnlessGrid.java
tests/: CMakeLists.txt  EvaluateTest.hx  FourSymbolTest.hx  Main.hx  NormalizeTest.hx  ParseTest.hx  TranslateTest.hx  UnflattenTest.hx  test_basics.ts
tools/: CMakeLists.txt  Fritzifier.java  GridLoader.java  Unless.java  UnlessNet.java  make_without_docker.sh  sound.cpp  whitespace.cpp
tools-src/: CMakeLists.txt  Fritzifier.java  UnlessDriver.java  whitespace.cpp
tools/command_line/: cosh.js  cosmsg.js
tools/repl/: repl.js
transform/: CMakeLists.txt  Makefile  config.json  test_audio.js  test_eval.js  test_scrawl.js
transform/assemble/: assemble.sh  assemble2json.js  cos.js  cosmicos  cosmicos.js  evaluate.js  primer.js  vocab.js
transform/cmake/: assemble.cmake  convert_gate.cmake  convert_js.cmake  convert_pl.cmake  node.cmake
transform/cosmicos/: BitString.hx  CacheCodec.hx  ChainCodec.hx  Config.hx  Cons.hx  CosDefine.hx  CosFunction.hx  Cursor.hx  Evaluate.hx  EvaluateCodec.hx  FourSymbolCodec.hx  HumanSymbolCodec.hx  I32.hx  ManuscriptStyle.hx  Memory.hx  NormalizeCodec.hx  OghamStyle.hx  Parse.hx  ParseCodec.hx  PreprocessCodec.hx  Sound.hx  SpiderScrawl.hx  Vocab.hx  VocabMeta.hx
transform/font/: generate_glyphs.js  glyphs_to_svg.sh  msg2glyphs.js  msg2ogham.js
transform/tests/: test_eval.js  test_scrawl.js
variant/: default.cmake  iconic.cmake  nested.cmake  standard.cmake  tiny.cmake
variant/iconic/: vocab.json
vestigial/: Makefile  Makefile.plan  depend_inc.txt  highlight.css
www-src/: COMMENTS.TXT  template.html
